--- a/WEB FINALS/app/index.html
+++ b/WEB FINALS/app/index.html
@@ -1,26 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Movie Search App</title>
     <link rel="stylesheet" href="styles.css">
 </head>
-
 <body>
     <header>
-        <header>
-            <nav>
-                <div class="logo">MovieHub</div> 
-                <ul>
-                    <li><a href="#" id="homeLink">Home</a></li>
-                    <li><a href="#" id="moviesLink">Movies</a></li> 
-                    <li><a href="#">Genres</a></li>
-                </ul>
-            </nav>
-        </header>
-
+        <nav>
+            <div class="logo">MovieHub</div>
+            <ul>
+                <li><a href="#" id="homeLink">Home</a></li>
+                <li><a href="#" id="moviesLink">Movies</a></li>
+                <li><a href="#" id="genresLink">Genres</a></li>
+            </ul>
+        </nav>
     </header>
     <div class="container">
         <h1>Movie Search</h1>
@@ -30,8 +25,8 @@
         </div>
         <div id="movies" class="movies-container"></div>
         <div class="pagination">
-            <button id="prevButton" enable>Previous</button>
-            <button id="nextButton" enable>Next</button>
+            <button id="prevButton">Previous</button>
+            <button id="nextButton">Next</button>
         </div>
         <div class="overlay">
             <div class="movie-details">
@@ -52,8 +47,19 @@
                 </div>
             </div>
         </div>
+        
+
+        <section id="randomMovieSection" style="display: none;">
+            <h2>Random Latest Movies</h2>
+            <div id="randomMovies"></div>
+        </section>
+
+        <section id="genreSection" style="display: none;">
+            <h2>Movie Genres</h2>
+            <div id="genres"></div>
+            <div id="genreMovies" class="movies-container"></div>
+        </section>
     </div>
     <script src="script.js"></script>
 </body>
-
 </html>
